--- a/.github/workflows/pack-scan-push.yaml
+++ b/.github/workflows/pack-scan-push.yaml
@@ -78,40 +78,30 @@ jobs:
 
   sonar_scan:
     runs-on: windows-latest
-    needs: build
-
+    needs: build  
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2  
-
-      - name: Run SonarQube Analysis
+        uses: actions/checkout@v2 
+      - name: SonarQube Scan
+        id: sonar_scan
         uses: ./.github/actions/sonar-scan
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          sonar_token: ${{ secrets.SONAR_TOKEN }}
-
-      - name: Check Quality Gate (Master Branch with Tag Only)
-        if: github.ref == 'refs/heads/master' && startsWith(env.GITHUB_REF, 'refs/tags/')
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}  
+          sonar_token: ${{ secrets.SONAR_TOKEN }} 
+      - name: Check Quality Gate
+        if: startsWith(github.ref, 'refs/heads/master') && github.event_name == 'push' && github.ref != ''  
         run: |
-          echo "Checking Quality Gate for Master branch with a tag."
-          QUALITY_GATE_STATUS=$(curl -s -u "${{ secrets.SONAR_TOKEN }}:" \
-            "https://sonarcloud.io/api/qualitygates/project_status?projectKey=yashmahi88_nexus-git" \
-            | jq -r '.projectStatus.status')
-
-          echo "Quality Gate Status: $QUALITY_GATE_STATUS"
-
-          if [[ "$QUALITY_GATE_STATUS" != "OK" ]]; then
-            echo "Quality Gate failed. Exiting..."
+          
+          sleep 180  
+          # Fetch the quality gate status from SonarQube
+          PROJECT_KEY="yasmahi88_nexus-git"  # Replace with your actual project key
+          QUALITY_GATE_STATUS=$(curl -s -u ${{ secrets.SONAR_TOKEN }} "https://sonarcloud.io/api/qualitygates/project_status?projectKey=${PROJECT_KEY}")
+          
+          # Check the quality gate status
+          if [[ "$QUALITY_GATE_STATUS" != *"passed"* ]]; then
+            echo "Quality Gate failed. Stopping the workflow."
             exit 1
           fi
-
-      - name: Skip Quality Gate Check (Master Without Tag)
-        if: github.ref == 'refs/heads/master' && !startsWith(env.GITHUB_REF, 'refs/tags/')
-        run: |
-          echo "Master branch detected but no valid tag provided. Skipping Quality Gate check."
-
   push_to_nexus:
     runs-on: ubuntu-latest
     needs: sonar_scan
@@ -135,5 +125,5 @@ jobs:
           NEXUS_API_KEY: ${{ secrets.NEXUS_API_KEY }}
         run: |
           dotnet nuget push ./bin/Release/${PACKAGE_ID}.${PACKAGE_VERSION}.nupkg \
-            --source http://52.187.94.85:8081/repository/nuget-rc \
+            --source http://52.187.94.85:8081/repository/nuget-tag \
             --api-key $NEXUS_API_KEY
