--- a/.github/workflows/pack-scan-push.yaml
+++ b/.github/workflows/pack-scan-push.yaml
@@ -89,19 +89,18 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}  
           sonar_token: ${{ secrets.SONAR_TOKEN }} 
       - name: Check Quality Gate
-        if: startsWith(github.ref, 'refs/heads/master') && github.event_name == 'push' && github.ref != ''  
+        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
         run: |
-          
-          sleep 180  
-          # Fetch the quality gate status from SonarQube
-          PROJECT_KEY="yasmahi88_nexus-git"  # Replace with your actual project key
-          QUALITY_GATE_STATUS=$(curl -s -u ${{ secrets.SONAR_TOKEN }} "https://sonarcloud.io/api/qualitygates/project_status?projectKey=${PROJECT_KEY}")
-          
-          # Check the quality gate status
-          if [[ "$QUALITY_GATE_STATUS" != *"passed"* ]]; then
-            echo "Quality Gate failed. Stopping the workflow."
-            exit 1
-          fi
+            sleep 180  
+            # Fetch the quality gate status from SonarQube
+            PROJECT_KEY="yashmahi88_nexus-git"  # Use your actual project key
+            QUALITY_GATE_STATUS=$(curl -s -u ${{ secrets.SONAR_TOKEN }} "https://sonarcloud.io/api/qualitygates/project_status?projectKey=${PROJECT_KEY}")
+  
+            # Check the quality gate status
+            if [[ "$QUALITY_GATE_STATUS" != *"passed"* ]]; then
+              echo "Quality Gate failed. Stopping the workflow."
+              exit 1
+            fi
   push_to_nexus:
     runs-on: ubuntu-latest
     needs: sonar_scan
