--- a/.github/workflows/pack-scan-push.yaml
+++ b/.github/workflows/pack-scan-push.yaml
@@ -92,15 +92,16 @@ jobs:
         if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
         run: |
             sleep 20  
-            # Fetch the quality gate status from SonarQube
             PROJECT_KEY="yashmahi88_nexus-git"  # Use your actual project key
-            QUALITY_GATE_STATUS=$(curl -s -H "Authorization: Bearer ${{ secrets.SONAR_TOKEN }}" "https://sonarcloud.io/api/qualitygates/project_status?projectKey=${PROJECT_KEY}")
-            echo "Quality Gate Status Response: $QUALITY_GATE_STATUS"
-            STATUS=$(echo "$QUALITY_GATE_STATUS" | jq -r '.projectStatus.qualityGate.status')
-            # Check the quality gate status
-            if [[ "$QUALITY_GATE_STATUS" != *"passed"* ]]; then
+            QUALITY_GATE_STATUS=$(curl -s -H "Authorization: Bearer ${{ secrets.SONAR_TOKEN }}" "https://sonarcloud.io/api/qualitygates/project_status?projectKey=${PROJECT_KEY}")           
+            echo "Quality Gate Status Response: $QUALITY_GATE_STATUS"           
+            PROJECT_STATUS=$(echo "$QUALITY_GATE_STATUS" | jq -r '.projectStatus.status')            # Check if all conditions are OK
+            ALL_CONDITIONS_OK=$(echo "$QUALITY_GATE_STATUS" | jq -r '.projectStatus.conditions | all(.status == "OK")')
+            if [[ "$PROJECT_STATUS" != "OK" || "$ALL_CONDITIONS_OK" != "true" ]]; then
               echo "Quality Gate failed. Stopping the workflow."
               exit 1
+            else
+              echo "Quality Gate passed."
             fi
         shell: bash
   push_to_nexus:
