--- a/.github/workflows/pack-scan-push.yaml
+++ b/.github/workflows/pack-scan-push.yaml
@@ -108,7 +108,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: sonar_scan
     environment: nexus-approval
-    if: github.ref == 'refs/heads/master'
+    # if: github.ref == 'refs/heads/master'
 
     steps:
       - name: Download Package Artifact
